--- a/pom.xml
+++ b/pom.xml
@@ -1,197 +1,226 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.jenkins-ci.plugins</groupId>
-		<artifactId>plugin</artifactId>
-		<relativePath />
-		<version>3.2</version>
-	</parent>
-	<artifactId>overops-query</artifactId>
-	<version>0.25-SNAPSHOT</version>
-	<packaging>hpi</packaging>
-	<properties>
-		<!-- Baseline Jenkins version you use to build the plugin. Users must have 
-			this version or newer to run. -->
-		<jenkins.version>1.651.3</jenkins.version>
-		<java.level>8</java.level>
-		<!-- Other properties you may want to use: ~ java.level: set to 6 if your 
-			jenkins.version <= 1.611 ~ jenkins-test-harness.version: Jenkins Test Harness version you use to test the plugin. For Jenkins version >= 1.580.1 use JTH 
-			2.0 or higher. ~ hpi-plugin.version: The HPI Maven Plugin version used by 
-			the plugin.. ~ stapler-plugin.version: The Stapler Maven plugin version required 
-			by the plugin. -->
-	</properties>
-	<description>This plugin will check a build for errors in OverOps.</description>
-	<!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for 
-		the applicable one if needed. -->
-	<licenses>
-		<license>
-			<name>MIT License</name>
-			<url>http://opensource.org/licenses/MIT</url>
-		</license>
-	</licenses>
-	<dependencies>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins</groupId>
-			<artifactId>structs</artifactId>
-			<version>1.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-step-api</artifactId>
-			<version>2.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-cps</artifactId>
-			<version>2.39</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-job</artifactId>
-			<version>2.11.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-basic-steps</artifactId>
-			<version>2.6</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-durable-task-step</artifactId>
-			<version>2.13</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-api</artifactId>
-			<version>2.20</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-support</artifactId>
-			<version>2.14</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs-api</artifactId>
-			<version>2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.jaxrs</groupId>
-			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>2.8.10</version>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-client</artifactId>
-			<version>2.26</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.26</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.inject</groupId>
-			<artifactId>jersey-hk2</artifactId>
-			<version>2.26</version>
-		</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>plugin</artifactId>
+        <relativePath/>
+        <version>3.21</version>
+    </parent>
 
-		<dependency>
-			<groupId>net.sf.trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.8</version>
-		</dependency>
-	</dependencies>
+    <name>OverOps Query Plugin</name>
+    <description>This plugin will check a build for errors in OverOps.</description>
+    <url>https://wiki.jenkins.io/display/JENKINS/OverOps+Query+Plugin</url>
+    <groupId>org.overops.plugins</groupId>
+    <artifactId>overops-query</artifactId>
+    <version>0.25-SNAPSHOT</version>
+    <packaging>hpi</packaging>
+
+    <properties>
+        <java.level>8</java.level>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>jenkins-289</id>
+            <properties>
+                <jenkins.version>2.89.2</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-273</id>
+            <properties>
+                <jenkins.version>2.73.3</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-260</id>
+            <properties>
+                <jenkins.version>2.60.3</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-246</id>
+            <properties>
+                <jenkins.version>2.46.3</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-232</id>
+            <properties>
+                <jenkins.version>2.32.3</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-219</id>
+            <properties>
+                <jenkins.version>2.19.4</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-27</id>
+            <properties>
+                <jenkins.version>2.7.3</jenkins.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>jenkins-651</id>
+            <activation></activation>
+            <properties>
+                <jenkins.version>1.651.3</jenkins.version>
+            </properties>
+        </profile>
+    </profiles>
 
 
-	<developers>
-		<developer>
-			<id>joeOffenberg</id>
-			<name>Joe Offenberg</name>
-			<email>joe.offenberg@overops.com</email>
-		</developer>
-	</developers>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
 
-	<scm>
-		<connection>scm:git:ssh://github.com/jenkinsci/overops-query-plugin.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/jenkinsci/overops-query-plugin.git</developerConnection>
-		<url>https://github.com/jenkinsci/overops-query-plugin</url>
-    <tag>HEAD</tag>
-  </scm>
-	<repositories>
-		<repository>
-			<id>repo.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/public/</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>repo.jenkins-ci.org</id>
-			<url>https://repo.jenkins-ci.org/public/</url>
-		</pluginRepository>
-	</pluginRepositories>
-	<build>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-javadoc-plugin
-										</artifactId>
-										<versionRange>
-											[2.10.4,)
-										</versionRange>
-										<goals>
-											<goal>javadoc</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-	<groupId>org.overops.plugins</groupId>
-	<name>OverOps Query Plugin</name>
-	<url>https://wiki.jenkins.io/display/JENKINS/OverOps+Query+Plugin</url>
+    <dependencies>
+        <!--		<dependency>
+                    <groupId>org.jenkins-ci.plugins</groupId>
+                    <artifactId>structs</artifactId>
+                    <version>1.7</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-step-api</artifactId>
+                    <version>2.12</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-cps</artifactId>
+                    <version>2.39</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-job</artifactId>
+                    <version>2.11.2</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-basic-steps</artifactId>
+                    <version>2.6</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-durable-task-step</artifactId>
+                    <version>2.13</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-api</artifactId>
+                    <version>2.20</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-support</artifactId>
+                    <version>2.14</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>javax.ws.rs-api</artifactId>
+                    <version>2.1</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                    <version>2.8.5</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                    <artifactId>jackson-jaxrs-json-provider</artifactId>
+                    <version>2.8.10</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.glassfish.jersey.core</groupId>
+                    <artifactId>jersey-client</artifactId>
+                    <version>2.26</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jersey.media</groupId>
+                    <artifactId>jersey-media-json-jackson</artifactId>
+                    <version>2.26</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.glassfish.jersey.inject</groupId>
+                    <artifactId>jersey-hk2</artifactId>
+                    <version>2.26</version>
+                </dependency>-->
+
+        <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>symbol-annotation</artifactId>
+            <version>1.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove4j</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
+        </dependency>
+    </dependencies>
+
+
+    <developers>
+        <developer>
+            <id>joeOffenberg</id>
+            <name>Joe Offenberg</name>
+            <email>joe.offenberg@overops.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:ssh://github.com/jenkinsci/overops-query-plugin.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/overops-query-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/overops-query-plugin</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+
 </project>
